[19/7/2022] fix broken UI: terms IT

--- a/src/themes/global.css
+++ b/src/themes/global.css
@@ -97,6 +97,7 @@ body {
 
 .it-terms {
   color: gray;
+  word-break: break-word;
 }
 
 .cursor-pointer {
